getEvents fix